# TelegramMediaDownloader

./: .env.example  .gitignore  README.md  SETUP.md  makefile  mypy_report.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: advanced_usage.py  basic_usage.py  custom_filter.py  custom_namer.py  init.py
src/telegram_media_downloader/: __init__.py  main.py
src/telegram_media_downloader/config/: __init__.py  settings.py
src/telegram_media_downloader/core/: __init__.py  channel_manager.py  connection.py  downloader.py  media_downloader.py
src/telegram_media_downloader/filters/: __init__.py  default_filter.py  image_filter.py  video_filter.py
src/telegram_media_downloader/models/: __init__.py  channel_stats.py  download_session.py  media_info.py
src/telegram_media_downloader/namers/: __init__.py  channel_prefix_namer.py  timestamp_namer.py
src/telegram_media_downloader/protocols/: __init__.py  file_namer.py  media_filter.py  telegram_message.py
src/telegram_media_downloader/utils/: __init__.py  helpers.py  logging.py
tests/test_config/: test_settings.py
tests/test_core/: test_downloader.py
tests/test_filters/: test_image_filter.py
tests/test_models/: test_channel_stats.py  test_media_info.py
tests/test_namers/: init.py  test_channel_prefix_namer.py
